Update Maven configuration to target Java 8 and adjust dependencies